--- a/Auction.BLL/Auction.BLL.csproj
+++ b/Auction.BLL/Auction.BLL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{02E42685-527C-496E-B27D-862EA04A1A4E}</ProjectGuid>
+    <ProjectGuid>{80F228C1-AF99-421F-89DF-D3FDDB66755C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Auction.DAL</RootNamespace>
-    <AssemblyName>Auction.DAL</AssemblyName>
+    <RootNamespace>Auction.BLL</RootNamespace>
+    <AssemblyName>Auction.BLL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -38,6 +38,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,25 +47,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuctionContext.cs" />
-    <Compile Include="Configuration\AuctionItemBiddingConfiguration.cs" />
-    <Compile Include="Configuration\AuctionItemConfiguration.cs" />
-    <Compile Include="Configuration\BaseConfiguration.cs" />
-    <Compile Include="Configuration\FileAttachmentAuctionItemConfiguration.cs" />
-    <Compile Include="Entities\FileAttachmentAuctionItem.cs" />
-    <Compile Include="Configuration\FileAttachmentConfiguration.cs" />
-    <Compile Include="Entities\AuctionItem.cs" />
-    <Compile Include="Entities\AuctionItemBidding.cs" />
-    <Compile Include="Entities\Base.cs" />
-    <Compile Include="Entities\FileAttachment.cs" />
-    <Compile Include="Initializer\AuctionInitializer.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="Repositories\AuctionItemBiddingRepository.cs" />
+    <Compile Include="Repositories\FileAttachmentAuctionItemRepository.cs" />
+    <Compile Include="Repositories\FileHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AuctionItemRepository.cs" />
+    <Compile Include="Repositories\BaseRepository.cs" />
+    <Compile Include="Repositories\FileAttachmentRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Auction.DAL\Auction.DAL.csproj">
+      <Project>{02e42685-527c-496e-b27d-862ea04a1a4e}</Project>
+      <Name>Auction.DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
