--- a/Auction.Web/Web.config
+++ b/Auction.Web/Web.config
@@ -11,7 +11,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="Auction.DaysValid" value="14" />
+		<add key="Auction.DaysValid" value="28" />
+		<add key="DataRootFolder" value="D:\Development\DotNet\Auction\Data" />
   </appSettings>
 	<connectionStrings>
 		<add name="Auction.DAL.AuctionContext" connectionString="Data Source=.\SQLExpress2008R2;Initial Catalog=Auction;Persist Security Info=True;Trusted_Connection=False;User Id=sa;Password=1234" providerName="System.Data.SqlClient" />
