--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Auction.BLL\packages.config" />
   <repository path="..\Auction.DAL\packages.config" />
   <repository path="..\Auction.Web\packages.config" />
 </repositories>
