--- a/Auction.Web/Web.config
+++ b/Auction.Web/Web.config
@@ -11,14 +11,14 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="Auction.DaysValid" value="28" />
+		<add key="Auction.DaysValid" value="14" />
 		<add key="DataRootFolder" value="D:\Development\DotNet\Auction\Data" />
   </appSettings>
 	<connectionStrings>
 		<add name="Auction.DAL.AuctionContext" connectionString="Data Source=.\SQLExpress2008R2;Initial Catalog=Auction;Persist Security Info=True;Trusted_Connection=False;User Id=sa;Password=1234" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <system.web>
-    
+		<globalization culture="nl-NL" uiCulture="nl-NL" />
     <httpRuntime targetFramework="4.5" />
     
     <compilation debug="true" targetFramework="4.5" />
