--- a/Auction.Web/Web.config
+++ b/Auction.Web/Web.config
@@ -19,7 +19,7 @@
 	</connectionStrings>
   <system.web>
 		<globalization culture="nl-NL" uiCulture="nl-NL" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="65536" />
     
     <compilation debug="true" targetFramework="4.5" />
 
