--- a/Auction.Web/Auction.Web.csproj
+++ b/Auction.Web/Auction.Web.csproj
@@ -109,7 +109,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ContentController.cs" />
-    <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\AuctionController.cs" />
     <Compile Include="Controllers\FileAttachmentController.cs" />
     <Compile Include="Global.asax.cs">
@@ -153,6 +152,9 @@
     <Content Include="humans.txt" />
     <Content Include="index.html" />
     <Content Include="robots.txt" />
+    <Content Include="Scripts\vendor\jquery.globalize.culture.nl-NL.js" />
+    <Content Include="Scripts\vendor\jquery.globalize.js" />
+    <Content Include="Scripts\vendor\jquery.validate.messages-nl.js" />
     <Content Include="Scripts\vendor\jquery.validate.min.js" />
     <Content Include="Scripts\vendor\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\main.js" />
@@ -173,7 +175,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="DataAnnotations\" />
-    <Folder Include="Validators\" />
+    <Folder Include="Views\Validators\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
