--- a/Auction.Web/Web.config
+++ b/Auction.Web/Web.config
@@ -12,8 +12,17 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="Auction.DaysValid" value="14" />
+
+		<add key="Mail.SmtpHostname" value="mail.planet.nl" />
+		<add key="Mail.SmtpPortnumber" value="25" />
+		<add key="Mail.SmtpUsername" value="" />
+		<add key="Mail.SmtpPassword" value="" />
+
+		<add key="Mail.SenderAddress" value="veiling@hervormdrouveen.nl" />
+		<add key="Mail.AdminAddress" value="henronijboer@gmail.com" />
 		<add key="DataRootFolder" value="D:\Development\DotNet\Auction\Data" />
-  </appSettings>
+		<add key="AccountNumber" value="NL123456789" />		
+	</appSettings>
 	<connectionStrings>
 		<add name="Auction.DAL.AuctionContext" connectionString="Data Source=.\SQLExpress2008R2;Initial Catalog=Auction;Persist Security Info=True;Trusted_Connection=False;User Id=sa;Password=1234" providerName="System.Data.SqlClient" />
 	</connectionStrings>
