--- a/Auction.BLL/Auction.BLL.csproj
+++ b/Auction.BLL/Auction.BLL.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="MailHelper.cs" />
     <Compile Include="Repositories\AuctionItemBiddingRepository.cs" />
     <Compile Include="Repositories\FileAttachmentAuctionItemRepository.cs" />
     <Compile Include="FileHelper.cs" />
