Veiling items worden niet meer automatisch stopgezet

--- a/Auction.Web/Web.config
+++ b/Auction.Web/Web.config
@@ -11,9 +11,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="Auction.DaysValid" value="14" />
 
-		<add key="Mail.SmtpHostname" value="mailhost" />
+		<add key="Mail.SmtpHostname" value="localhost" />
 		<add key="Mail.SmtpPortnumber" value="25" />
 		<add key="Mail.SmtpUsername" value="" />
 		<add key="Mail.SmtpPassword" value="" />
