--- a/Auction.Web/Auction.Web.csproj
+++ b/Auction.Web/Auction.Web.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Models\AuctionItemAddModel.cs" />
     <Compile Include="Models\AuctionItemBiddingModel.cs" />
     <Compile Include="Models\AuctionItemDetailModel.cs" />
+    <Compile Include="Models\AuctionItemManageModel.cs" />
     <Compile Include="Models\AuctionItemOverviewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -223,6 +224,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Auction\Add.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Auction\Manage.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
