--- a/Auction.Web/Web.config
+++ b/Auction.Web/Web.config
@@ -5,17 +5,18 @@
   -->
 
 <configuration>
-  <appSettings>
-    <add key="webpages:Version" value="2.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<appSettings>
+		<add key="webpages:Version" value="2.0.0.0" />
+		<add key="webpages:Enabled" value="false" />
+		<add key="PreserveLoginUrl" value="true" />
+		<add key="ClientValidationEnabled" value="true" />
+		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
 		<add key="Mail.SmtpHostname" value="localhost" />
 		<add key="Mail.SmtpPortnumber" value="25" />
 		<add key="Mail.SmtpUsername" value="" />
 		<add key="Mail.SmtpPassword" value="" />
+		<add key="Mail.SmtpEnableSsl" value="False" />
 
 		<add key="Mail.SenderAddress" value="afzender@website.nl" />
 		<add key="Mail.AdminAddress" value="admin@website.nl" />
@@ -28,26 +29,44 @@
 	<connectionStrings>
 		<add name="Auction.DAL.AuctionContext" connectionString="Data Source=.\SQLExpress2008R2;Initial Catalog=Auction;Persist Security Info=True;Trusted_Connection=False;User Id=sa;Password=1234" providerName="System.Data.SqlClient" />
 	</connectionStrings>
-  <system.web>
+	<system.web>
 		<globalization culture="nl-NL" uiCulture="nl-NL" />
-    <httpRuntime targetFramework="4.5" maxRequestLength="65536" />
-    
-    <compilation debug="true" targetFramework="4.5" />
+		<httpRuntime targetFramework="4.5" maxRequestLength="65536" />
 
-    <pages>
-      <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
-      </namespaces>
-    </pages>
-  </system.web>
+		<compilation debug="true" targetFramework="4.5" />
 
-  <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-     
-  <handlers><remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" /><remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" /><remove name="ExtensionlessUrlHandler-Integrated-4.0" /><add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" /><add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers></system.webServer>
+		<pages>
+			<namespaces>
+				<add namespace="System.Web.Helpers" />
+				<add namespace="System.Web.Mvc" />
+				<add namespace="System.Web.Mvc.Ajax" />
+				<add namespace="System.Web.Mvc.Html" />
+				<add namespace="System.Web.Routing" />
+				<add namespace="System.Web.WebPages" />
+			</namespaces>
+		</pages>
+	</system.web>
+
+	<system.webServer>
+		<validation validateIntegratedModeConfiguration="false" />
+		<rewrite>
+			<rules>
+				<rule name="Redirect to HTTPS" stopProcessing="true">
+					<match url="(.*)" />
+					<conditions>
+						<add input="{HTTPS}" pattern="OFF" ignoreCase="true" />
+					</conditions>
+					<action type="Redirect" url="https://veiling.hervormdrouveen.nl/{R:1}" />
+				</rule>
+			</rules>
+		</rewrite>
+		<handlers>
+			<remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
+			<remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
+			<remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+			<add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
+			<add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
+			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+		</handlers>
+	</system.webServer>
 </configuration>
